--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     <div class="apresentacao">
       <!-- FOTO SUA AQUI -->
       <img
-        src="https://via.placeholder.com/180"
+        src="foto.jpeg"
         alt="Minha foto"
         class="perfil-img"
       />
       <div>
-        <h1>Olá, sou Desenvolvedor Web!</h1>
-        <p>Este é meu portfólio utilizando HTML, CSS e Bootstrap.</p>
+        <h1>Olá, sou Gustavo Moro Conke!</h1>
+        <p>Este é meu portfólio.</p>
         <a href="#projetos" class="btn btn-primary">Ver Projetos</a>
       </div>
     </div>
